# e_com_fastapi

./: .env  authentication.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  email_utils.py  main.py  models.py  pyproject.toml
templates/: verify.html
